--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.426.0",
     "next": "14.2.5",
+    "node": "^22.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
